<resources>
    <string name="app_name">TODOListKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="todo">TODO</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="change_view">Change View</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>


    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>