<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_change_view"
            android:title="@string/change_view">
            <menu>
                <item
                    android:id="@+id/menu_list_view"
                    android:title="@string/list_view"/>
                <item
                    android:id="@+id/menu_grid_view"
                    android:title="@string/grid_view"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>

</menu>